# CalculatorCPP

./: CMakeLists.txt  Calculator.cpp  Calculator.h  README.md  basic_operations.cpp  basic_operations.h  main.cpp  operation_interface.h
